--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-blinker       1.9.0
-click         8.1.8
-colorama      0.4.6
-Flask         3.1.0
-flask-cors    5.0.1
-itsdangerous  2.2.0
-Jinja2        3.1.6
-joblib        1.4.2
-lightgbm      4.6.0
-MarkupSafe    3.0.2
-numpy         2.2.4
-pip           24.0
-PyWavelets    1.8.0
-scikit-learn  1.6.1
-scipy         1.15.2
-threadpoolctl 3.6.0
-Werkzeug      3.1.3
-xgboost       3.0.0
+blinker==1.9.0
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+flask-cors==5.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.4.2
+lightgbm==4.6.0
+MarkupSafe==3.0.2
+numpy==2.2.4
+pip==24.0
+PyWavelets==1.8.0
+scikit-learn==1.6.1
+scipy==1.15.2
+threadpoolctl==3.6.0
+Werkzeug==3.1.3
+xgboost==3.0.0
